# llm-game-utils

./: .env.example  .gitignore  API_KEY_SETUP.md  LICENSE  MANIFEST.in  README.md  example.py  examples_advanced.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
llm_game_utils/: __init__.py  exceptions.py
llm_game_utils/caching/: __init__.py  response_cache.py
llm_game_utils/clients/: __init__.py  base_client.py  batch_runner.py  openrouter_client.py
llm_game_utils/logging/: __init__.py  result_logger.py
llm_game_utils/prompts/: __init__.py  json_parser.py  prompt_formatter.py
llm_game_utils/tracking/: __init__.py  budget.py
tests/: __init__.py  test_batch_runner.py  test_budget_tracker.py  test_json_parser.py  test_openrouter_client.py  test_prompt_formatter.py  test_response_cache.py  test_result_logger.py
